--- a/ProjetoIndividual-GeoTech/web-data-viz/.env.dev
+++ b/ProjetoIndividual-GeoTech/web-data-viz/.env.dev
@@ -1,7 +1,7 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
-DB_HOST=localhost
+DB_HOST=192.168.1.161
 DB_DATABASE='geotech'
 DB_USER='aluno'
 DB_PASSWORD='Sptech#2024'
